# CPP_Assessment

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt  common.cmake
code/cmake/: FindGMock.cmake
code/inc/: ArmorObject.h  CharArray.h  ConsumableObject.h  Dungeon.h  DungeonFacade.h  Enemy.h  EnemyFactory.h  Game.h  GameObject.h  GameObjectFacade.h  GameObjectFactory.h  GoldObject.h  IGameObject.h  Location.h  LocationFactory.h  Logger.h  Player.h  RandomGenerator.h  Sean.h  SeanObject.h  SqlReader.h  String.h  Type.h  UniquePtr.h  Vector.h  WeaponObject.h  XmlReader.h
code/src/: ArmorObject.cpp  ConsumableObject.cpp  Dungeon.cpp  DungeonFacade.cpp  Enemy.cpp  EnemyFactory.cpp  Game.cpp  GameObject.cpp  GameObjectFacade.cpp  GameObjectFactory.cpp  GoldObject.cpp  Location.cpp  LocationFactory.cpp  Logger.cpp  Player.cpp  RandomGenerator.cpp  SqlReader.cpp  WeaponObject.cpp  XmlReader.cpp  main.cpp
code/tests/: CMakeLists.txt  test_dungeon.cpp  test_enemy.cpp  test_gameObjects.cpp  test_gameObjectsFactory.cpp  test_location.cpp  test_player.cpp  test_sql.cpp  test_xml.cpp
docs/: vragen.tex
docs/classDiagram/: class.puml
sql/: kerkersendraken.db
xml/: kasteelruine.xml
